2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Can't use a function from the common module in a bundled module.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/base/http.py:
	Move the BOUNCER_SOCKET constant to the base module to avoid having to
	put flumotion.component.bouncers.component in the bundles for
	http-server and http-streamer.

2010-06-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* configure.ac:
	Remove pycairo check from configure. It's a runtime dependency and
	should be handled by packagers, as it was done for PIL.

2010-06-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/component.py:
	Make returning None as the plug remote methods namespace expose the
	remote methods with their original names.

2010-06-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Josep Ribas

	* pkg/ubuntu-gutsy (deleted):
	* pkg/ubuntu-gutsy/changelog (deleted):
	* pkg/ubuntu-gutsy/control (deleted):
	Remove gutsy package, not supported anymore by ubuntu.

2010-06-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Josep Ribas

	* pkg/debian-common/control:
	* pkg/ubuntu-gutsy/control:
	* pkg/ubuntu-hardy/control:
	* pkg/ubuntu-intrepid/control:
	* pkg/ubuntu-jaunty/control:
	* pkg/ubuntu-karmic/control:
	Update debian packages to switch the dependency between PIL and cairo

2010-06-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Josep Ribas

	* README:
	* configure.ac:
	* flumotion.spec.in:
	* flumotion/admin/gtk/overlaystep.py:
	* flumotion/component/converters/overlay/Makefile.am:
	* flumotion/component/converters/overlay/genimg.py:
	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/component/converters/overlay/overlay.xml:
	* flumotion/component/converters/overlay/Vera.ttf (deleted):