@@ -253,7 +253,8 @@ class Disker(feedcomponent.ParseLaunchComponent, log.Loggable):
 
         sink = self.get_element('fdsink')
 
-        if gstreamer.element_has_property(sink, 'resend-streamheader'):
+        if gstreamer.element_factory_has_property('multifdsink',
+                                                  'resend-streamheader'):
             sink.set_property('resend-streamheader', False)
         else:
             self.debug("resend-streamheader property not available, "
