@@ -252,21 +252,6 @@ class HTTPMedium(feedcomponent.FeedComponentMedium):
         return self.comp.updatePorterDetails(path, username, password)
 
 
-def element_has_property(element, property_name):
-    """
-    Check if the given element has the given property.
-
-    @rtype: boolean
-    """
-    # Verbose copy from common.gstreamer, but since that's not bundled it has
-    # to go here
-    try:
-        element.get_property(property_name)
-        return True
-    except TypeError:
-        return False
-
-
 ### the actual component is a streamer using multifdsink
 
 
@@ -372,7 +357,8 @@ class MultifdSinkStreamer(feedcomponent.ParseLaunchComponent, Stats):
     def setup_burst_mode(self, sink):
         if self.burst_on_connect:
             if self.burst_time and \
-                    element_has_property(sink, 'units-max'):
+                    gstreamer.element_factory_has_property('multifdsink',
+                                                           'units-max'):
                 self.debug("Configuring burst mode for %f second burst",
                     self.burst_time)
                 # Set a burst for configurable minimum time, plus extra to
@@ -474,7 +460,7 @@ class MultifdSinkStreamer(feedcomponent.ParseLaunchComponent, Stats):
 
         self.setup_burst_mode(sink)
 
-        if element_has_property(sink, 'resend-streamheader'):
+        if element_factory_has_property('multifdsink', 'resend-streamheader'):
             sink.set_property('resend-streamheader', False)
         else:
             self.debug("resend-streamheader property not available, "
