@@ -1,5 +1,13 @@
 2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>
 
+	* flumotion/component/consumers/disker/disker.py:
+	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
+	Don't use the newly added element_has_property, but the older
+	element_factory_has_property to avoid bundling issues with recent managers
+	vs not-so-recent workers.
+
+2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>
+
 	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
 	Can't use a function from the common module in a bundled module.
 
